--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -56,12 +56,13 @@ html,body{
       text-align:center;
       .img-title{
         margin:20px 0 0  0;
-        color:#a7a0a2;
-        font-size: 12px;
+        color:#888;
+        font-size: 4px;
       }.img-back {
          position: absolute;
          top: 0;
          left: 0;
+         color:red;
 
          width: 100%;
          height: 100%;
@@ -73,7 +74,7 @@ html,body{
          line-height: 1.25;
          text-align: left;
 
-         background-color: #fff;
+         background-color: #ccc;
 
          box-sizing: border-box;
 
