--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -161,3 +161,17 @@ html, body {
 }
 /* controller -- end */
 
+/* linksapp -- start */
+.linksapp-nav {
+    position: absolute;
+    left: 0;
+    top: 20px;
+    z-index: 101;
+
+    width: 100%;
+
+    text-align: center;
+
+}
+/* linksapp -- end */
+
