--- a/src/styles/RootIndex.css
+++ b/src/styles/RootIndex.css
@@ -36,7 +36,7 @@ html, body {
 */
 }
 .secondpagebar {
-	color: yellow;
+	color: blue;
 /*	position: absolute;
 	left: 60;
 	top: 60;
@@ -48,8 +48,11 @@ html, body {
 .navbarzyx {
     position: absolute;
     left: 0;
-    top: 20;
-    width: 200px;
-    height: 680px;
+    top: 20px;
+    z-index: 101;
+
+    width: 100%;
+
+    text-align: center;
 }
 /* navbar -- end */
